# gslc

./: Cargo.toml  README.md  index.html  install.ps1  install.sh
.github/workflows/: build.yml  release.yml
src/: main.rs
